--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An application that displays commonly owned games of multiple users.",
   "main": "app.js",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "nodemon dist/app.js & tsc -watch ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
@@ -23,7 +23,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.11",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
