--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/theo-dean/Mutual-Steam-Games#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "tsc": "^1.20150623.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
