--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "An application that displays commonly owned games of multiple users.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon dist/app.js & tsc -watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "pretty": "prettier --write \"./**/*.{js,ts,json}\""
+    "pretty": "prettier --write \"./**/*.{js,ts,json}\"",
+    "dev": "nodemon",
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
   },
   "repository": {
     "type": "git",
