--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "prettier": "^2.2.1",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
