--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "An application that displays commonly owned games of multiple users.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "tsc": "tsc",
     "pretty": "prettier --write \"./**/*.{js,ts,json}\"",
     "dev": "nodemon",
@@ -28,6 +28,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.21",
+    "jest": "^26.6.3",
+    "msw": "^0.27.1",
     "prettier": "^2.2.1",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
