--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "jest": "^26.6.3",
     "msw": "^0.27.1",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
