--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "tsc": "tsc",
     "pretty": "prettier --write \"./**/*.{js,ts,json}\"",
     "dev": "nodemon",
-    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts",
+    "start": "ts-node src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "msw": "^0.27.1",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
