--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -20,6 +20,9 @@ service: mutual-steam-games-backend
 # Check out our docs for more details
 frameworkVersion: '2'
 
+plugins:
+  - serverless-plugin-typescript
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -58,14 +61,14 @@ provider:
 
 functions:
   getUser:
-    handler: handler.hello
+    handler: handler.testFunc
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-#    events:
-#      - httpApi:
-#          path: /users/create
-#          method: get
+    events:
+     - http:
+          path: test
+          method: get
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
@@ -84,7 +87,7 @@ functions:
 #            detail:
 #              state:
 #                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
+#     - cloudwatchLog: '/aws/lambda/msg-backend/test'
 #      - cognitoUserPool:
 #          pool: MyUserPool
 #          trigger: PreSignUp
