--- a/backend/package.json
+++ b/backend/package.json
@@ -28,11 +28,13 @@
     "tsc": "^1.20150623.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.76",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "jest": "^26.6.3",
     "msw": "^0.27.1",
     "prettier": "^2.2.1",
+    "serverless": "^2.41.2",
     "serverless-plugin-typescript": "^1.1.9",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
