--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -61,14 +61,14 @@ provider:
 
 functions:
   getUser:
-    handler: handler.testFunc
+    handler: src/handler.testFunc
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
     events:
      - http:
           path: test
-          method: get
+          method: post
 #      - websocket: $connect
 #      - s3: ${env:BUCKET}
 #      - schedule: rate(10 minutes)
