--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "serverless-http": "^2.7.0",
     "tsc": "^1.20150623.0"
   },
   "devDependencies": {
