fixed ci config, and testing ci pr trigger/filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,6 @@ workflows:
       - deploy-stage:
           requires:
             - build-and-test
-          filter:
+          filters:
             branches:
               only: main
