fixed serverless config, and added missing handler

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,7 +14,7 @@ provider:
 
 functions:
   app:
-    handler: src/handler.handler
+    handler: src/app.handler
     events:
       - http:
           path: /
