--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,11 +36,7 @@ jobs:
             npm run deploy -- -s stage
 
 workflows:
-  # Below is the definition of your workflow.
-  # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
-  # CircleCI will run this workflow on every commit.
-  # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  build_and_deploy_stage:
+  build_and_deploy:
     jobs:
       - build-and-test
       - deploy-stage:
