--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: cimg/node:15.1
+      - image: cimg/openjdk:15.0.1-node
     steps:
       - checkout
       - node/install-packages
