--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
       - image: cimg/openjdk:15.0.1-node
     steps:
       - checkout
-      - node/install-packages
+      - run:
+          name: Set up NPM
+          command: sudo npm ci --unsafe-perm
       - run:
           name: Run tests
           command: npm test
