--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - restore_cache:
           key: cache-{{ checksum "package-lock.json" }}-v1
       - aws-cli/install
-      - aws-cli/configure
+      - aws-cli/setup
       - run:
           name: run e2e tests
           command: npm run e2etest
