--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - aws-cli/setup
       - run:
           name: run e2e tests
-          command: npm run e2etest
+          command: npm run e2e-test
 
   deploy-stage:
     docker:
