--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "utest": "",
     "itest": "",
-    "e2etest": "",
+    "e2e-test": "",
     "tsc": "tsc",
     "pretty": "prettier --write \"./**/*.{js,ts,json}\"",
     "dev": "nodemon",
