--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,9 @@ jobs:
       - aws-cli/install
       - aws-cli/setup
       - run:
+            name: Set up NPM
+            command: npm ci
+      - run:
           name: run e2e tests
           command: npm run e2e-test
 
