--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,19 +24,6 @@ jobs:
           paths:
             - node_modules
 
-  aws-setup:
-    docker:
-      - image: cimg/node:15.1
-    steps:
-      - checkout
-      - restore_cache:
-          key: cache-{{ checksum "package-lock.json" }}-v1
-      - aws-cli/install
-      - aws-cli/setup
-      - run:
-          name: Set up NPM
-          command: npm ci
-
   deploy-stage:
     docker:
       - image: cimg/openjdk:15.0.1-node
@@ -46,6 +33,11 @@ jobs:
       - checkout
       - restore_cache:
           key: cache-{{ checksum "package-lock.json" }}-v1
+      - aws-cli/install
+      - aws-cli/setup
+      - run:
+          name: Set up NMP
+          command: npm ci
       - run:
           name: deploying to stage
           command: |
@@ -56,12 +48,9 @@ workflows:
   build_and_deploy:
     jobs:
       - build-and-test
-      - aws-setup:
-          requires:
-            - build-and-test
       - deploy-stage:
           requires:
-            - aws-setup
+            - build-and-test
           filters:
             branches:
               only: main
