--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,25 @@ jobs:
           command: |
             npm run deploy -- -s stage
 
+  deploy-prod:
+    docker:
+      - image: cimg/openjdk:15.0.1-node
+        environment:
+          SLS_DEBUG: '*'
+    steps:
+      - checkout
+      - restore_cache:
+          key: cache-{{ checksum "package-lock.json" }}-v1
+      - aws-cli/install
+      - aws-cli/setup
+      - run:
+          name: Set up NMP
+          command: npm ci
+      - run:
+          name: deploying to stage
+          command: |
+            npm run deploy -- -s prod
+
 workflows:
   version: 2
   build_and_deploy:
@@ -55,3 +74,10 @@ workflows:
       - deploy-stage:
           requires:
             - deploy-stage-approval
+      - deploy-prod-approval:
+          type: approval
+          requires:
+            - deploy-stage
+      - deploy-prod:
+          requires:
+            - deploy-prod-approval
