make deploy prod available on main only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,9 @@ workflows:
           requires:
             - deploy-stage-approval
       - deploy-prod-approval:
+          filters:
+            branches:
+              only: main
           type: approval
           requires:
             - deploy-stage
